# WeatherData

./: README.md  setup.cfg
src/: WeatherData.py
src/ipmd_weatherdata/: __init__.py  weatherdata.py  weatherdata_utils.py
