[metadata]
name = ipmd-weatherdata
version = 1.3.0
author = Tor-Einar Skog
author_email = tor-einar.skog@nibio.no
description = Tools for IPM Decisions standard weatherdata format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.ipmdecisions.net
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero GPL v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src